# food-scan-benchmarks

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
food_scan_bench/: analyze_results.py  evaluate.py  metrics.py  prompts.py  run_benchmark.py  schema.py  utils.py
food_scan_bench/dataset/: __init__.py  foodscan_dataset.py
food_scan_bench/models/: __init__.py  january.py  llm.py
notebooks/: sample_run.ipynb
scripts/: analyze_results.py  run_benchmark.py
