[project]
name = "food-scan-bench"
version = "0.1.0"
description = "Real-world food image recognition benchmark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.36",
    "litellm>=1.72.4",
    "pandas>=2.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
]
